[gd_scene load_steps=3 format=3 uid="uid://cm62op28wet6m"]

[ext_resource type="Script" uid="uid://ccs28gqspjjtx" path="res://scripts/game_ui.gd" id="1_yubou"]
[ext_resource type="FontFile" uid="uid://dyc41syp7k2fc" path="res://assets/Font/HyperStiffRoundBootiedOpossumRegular-XjVd.ttf" id="2_rns2u"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yubou")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 21.0
offset_top = 31.0
offset_right = 211.0
offset_bottom = 124.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("2_rns2u")
theme_override_font_sizes/normal_font_size = 40
text = " 0"

[node name="ComboLabel" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
z_index = 5
offset_left = 26.0
offset_top = 130.0
offset_right = 216.0
offset_bottom = 223.0
theme_override_colors/default_color = Color(0.533037, 0.533037, 0.533037, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("2_rns2u")
theme_override_font_sizes/normal_font_size = 40
text = " 0x"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboLabelRefresh" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="ComboLabelRefresh" to="." method="_on_combo_label_refresh_timeout"]
